--- a/package.json
+++ b/package.json
@@ -8,5 +8,12 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "js-cookie": "^2.2.1",
+    "react-redux": "^7.2.2",
+    "react-redux-router": "0.0.14",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
+  }
 }
